Change theme to dark mode and added text display for invalid stops.

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,11 @@
 html {
     font-family: monospace;
     text-align: center;
+    background-color: Canvas;
+    color: CanvasText;
+    color-scheme: light dark;
 }
+
 .container {
     display: grid;
 }
